added error handling to web scraping

--- a/nbs/nbaDataCleaning.ipynb
+++ b/nbs/nbaDataCleaning.ipynb
@@ -6,16 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_2019 = pd.read_csv(\"../data/nba_stats_2019.csv\")"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,76 +16,308 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2016 = pd.read_csv(\"../data/2016-17_teamBoxScore.csv\")"
+    "year = '2019'\n",
+    "df = pd.read_csv('../data/nba_team_box_scores_'+str(year)+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>gameID</th>\n",
+       "      <th>teamPTS</th>\n",
+       "      <th>teamFG%</th>\n",
+       "      <th>team3PT%</th>\n",
+       "      <th>teamFT%</th>\n",
+       "      <th>teamTREB</th>\n",
+       "      <th>teamASST</th>\n",
+       "      <th>teamSTL</th>\n",
+       "      <th>teamBLK</th>\n",
+       "      <th>...</th>\n",
+       "      <th>opptTO</th>\n",
+       "      <th>opptFB_PTS</th>\n",
+       "      <th>opptPNT_PTS</th>\n",
+       "      <th>opptFOUL</th>\n",
+       "      <th>opptLG_LEAD</th>\n",
+       "      <th>opptOREB</th>\n",
+       "      <th>opptDREB</th>\n",
+       "      <th>opptTO_PTS</th>\n",
+       "      <th>opptFOUL_T</th>\n",
+       "      <th>opptFOUL_F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2.458000e+03</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "      <td>2458.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1228.500000</td>\n",
+       "      <td>4.010713e+08</td>\n",
+       "      <td>111.195688</td>\n",
+       "      <td>46.143124</td>\n",
+       "      <td>35.520342</td>\n",
+       "      <td>76.712449</td>\n",
+       "      <td>53.513832</td>\n",
+       "      <td>24.583401</td>\n",
+       "      <td>7.633035</td>\n",
+       "      <td>4.951587</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.080146</td>\n",
+       "      <td>13.800651</td>\n",
+       "      <td>48.593979</td>\n",
+       "      <td>20.903173</td>\n",
+       "      <td>12.553702</td>\n",
+       "      <td>10.345403</td>\n",
+       "      <td>34.813670</td>\n",
+       "      <td>16.433686</td>\n",
+       "      <td>0.638324</td>\n",
+       "      <td>0.043938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>709.707804</td>\n",
+       "      <td>3.712529e+02</td>\n",
+       "      <td>12.648481</td>\n",
+       "      <td>5.333076</td>\n",
+       "      <td>8.682060</td>\n",
+       "      <td>10.237144</td>\n",
+       "      <td>7.451704</td>\n",
+       "      <td>5.119945</td>\n",
+       "      <td>2.947996</td>\n",
+       "      <td>2.485877</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.927467</td>\n",
+       "      <td>7.001434</td>\n",
+       "      <td>10.047117</td>\n",
+       "      <td>4.293987</td>\n",
+       "      <td>9.376523</td>\n",
+       "      <td>3.759008</td>\n",
+       "      <td>5.467135</td>\n",
+       "      <td>6.216017</td>\n",
+       "      <td>0.861955</td>\n",
+       "      <td>0.208932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.010702e+08</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>27.800000</td>\n",
+       "      <td>11.500000</td>\n",
+       "      <td>26.300000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>614.250000</td>\n",
+       "      <td>4.010710e+08</td>\n",
+       "      <td>103.000000</td>\n",
+       "      <td>42.600000</td>\n",
+       "      <td>29.600000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1228.500000</td>\n",
+       "      <td>4.010713e+08</td>\n",
+       "      <td>111.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>35.300000</td>\n",
+       "      <td>77.100000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1842.750000</td>\n",
+       "      <td>4.010716e+08</td>\n",
+       "      <td>119.000000</td>\n",
+       "      <td>49.500000</td>\n",
+       "      <td>40.900000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2457.000000</td>\n",
+       "      <td>4.010719e+08</td>\n",
+       "      <td>168.000000</td>\n",
+       "      <td>64.900000</td>\n",
+       "      <td>84.200000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 38 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(2460, 123)"
+       "        Unnamed: 0        gameID      teamPTS      teamFG%     team3PT%  \\\n",
+       "count  2458.000000  2.458000e+03  2458.000000  2458.000000  2458.000000   \n",
+       "mean   1228.500000  4.010713e+08   111.195688    46.143124    35.520342   \n",
+       "std     709.707804  3.712529e+02    12.648481     5.333076     8.682060   \n",
+       "min       0.000000  4.010702e+08    68.000000    27.800000    11.500000   \n",
+       "25%     614.250000  4.010710e+08   103.000000    42.600000    29.600000   \n",
+       "50%    1228.500000  4.010713e+08   111.000000    46.000000    35.300000   \n",
+       "75%    1842.750000  4.010716e+08   119.000000    49.500000    40.900000   \n",
+       "max    2457.000000  4.010719e+08   168.000000    64.900000    84.200000   \n",
+       "\n",
+       "           teamFT%     teamTREB     teamASST      teamSTL      teamBLK  ...  \\\n",
+       "count  2458.000000  2458.000000  2458.000000  2458.000000  2458.000000  ...   \n",
+       "mean     76.712449    53.513832    24.583401     7.633035     4.951587  ...   \n",
+       "std      10.237144     7.451704     5.119945     2.947996     2.485877  ...   \n",
+       "min      26.300000    32.000000    10.000000     0.000000     0.000000  ...   \n",
+       "25%      70.000000    48.000000    21.000000     6.000000     3.000000  ...   \n",
+       "50%      77.100000    53.000000    24.000000     7.000000     5.000000  ...   \n",
+       "75%      84.000000    58.000000    28.000000     9.000000     6.000000  ...   \n",
+       "max     100.000000    83.000000    42.000000    20.000000    19.000000  ...   \n",
+       "\n",
+       "            opptTO   opptFB_PTS  opptPNT_PTS     opptFOUL  opptLG_LEAD  \\\n",
+       "count  2458.000000  2458.000000  2458.000000  2458.000000  2458.000000   \n",
+       "mean     14.080146    13.800651    48.593979    20.903173    12.553702   \n",
+       "std       3.927467     7.001434    10.047117     4.293987     9.376523   \n",
+       "min       3.000000     0.000000    16.000000     9.000000     0.000000   \n",
+       "25%      11.000000     9.000000    42.000000    18.000000     5.000000   \n",
+       "50%      14.000000    13.000000    48.000000    21.000000    11.000000   \n",
+       "75%      17.000000    18.000000    56.000000    24.000000    18.000000   \n",
+       "max      29.000000    53.000000    84.000000    38.000000    58.000000   \n",
+       "\n",
+       "          opptOREB     opptDREB   opptTO_PTS   opptFOUL_T   opptFOUL_F  \n",
+       "count  2458.000000  2458.000000  2458.000000  2458.000000  2458.000000  \n",
+       "mean     10.345403    34.813670    16.433686     0.638324     0.043938  \n",
+       "std       3.759008     5.467135     6.216017     0.861955     0.208932  \n",
+       "min       1.000000    18.000000     2.000000     0.000000     0.000000  \n",
+       "25%       8.000000    31.000000    12.000000     0.000000     0.000000  \n",
+       "50%      10.000000    35.000000    16.000000     0.000000     0.000000  \n",
+       "75%      13.000000    38.000000    20.000000     1.000000     0.000000  \n",
+       "max      26.000000    55.000000    44.000000     5.000000     2.000000  \n",
+       "\n",
+       "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_2016.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['gmDate', 'gmTime', 'seasTyp', 'offLNm1', 'offFNm1', 'offLNm2',\n",
-       "       'offFNm2', 'offLNm3', 'offFNm3', 'teamAbbr',\n",
-       "       ...\n",
-       "       'opptFIC40', 'opptOrtg', 'opptDrtg', 'opptEDiff', 'opptPlay%', 'opptAR',\n",
-       "       'opptAST/TO', 'opptSTL/TO', 'poss', 'pace'],\n",
-       "      dtype='object', length=123)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_2016.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'Player', 'Pos', 'Age', 'Tm', 'G', 'GS', 'MP', 'FG',\n",
-       "       'FGA', 'FG%', '3P', '3PA', '3P%', '2P', '2PA', '2P%', 'eFG%', 'FT',\n",
-       "       'FTA', 'FT%', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF',\n",
-       "       'PTS'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_2019.columns"
+    "df.describe()"
    ]
   },
   {
