adding comments to web scraper

--- a/nbs/nbaWebScrape.ipynb
+++ b/nbs/nbaWebScrape.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "# Web Scraping in Python with BeautifulSoup: Collecting NBA Team Box Scores\n",
     "\n",
@@ -26,19 +22,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "## Scrape ESPN Team Page for Team Names\n",
     "\n",
-    "First, we're going to need a list of the NBA teams, so let's look at the strucure of the ESPN website. The [teams page](https://www.espn.com/nba/teams) looks like the following:\n",
-    "<img src=\"../images/espnTeamPage.png\"/>\n",
+    "First, we're going to need a list of the NBA teams, so let's look at the strucure of the ESPN website. The [teams page](https://www.espn.com/nba/teams) looks like the following:<br>\n",
+    "<img src=\"../images/espnTeamPage.png\"/><br>\n",
     "\n",
-    "Inspection of the page shows that links for each team are in a section container with a 'pl3' class. \n",
-    "<img src=\"../images/teamContainer.png\"/>\n",
+    "Inspection of the page shows that links for each team are in a section container with a 'pl3' class.<br>\n",
+    "<img src=\"../images/teamContainer.png\"/><br>\n",
     "So let's open the team page, parse it, and find all containers of that class."
    ]
   },
@@ -88,12 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -157,23 +144,12 @@
     "https://www.espn.com/nba/matchup?gameId=401070218.<br>\n",
     "So we need to get a list of all the game IDs. We do this by looking at the schedule page of each team.\n",
     "\n",
-    "A team's regular season schedule is listed on a URL with the following format: https://www.espn.com/nba/team/schedule/_/name/ABBR/season/YEAR/seasontype/2, where ABBR (team abbreviation) and YEAR are our variables of interest."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The class for each table row of a team's schedule contains the string \"Table__TR\". So we'll search for that and exclude the first row which are just the table's column names.\n",
+    "A team's regular season schedule is listed on a URL with the following format:<br>\n",
+    "https://www.espn.com/nba/team/schedule/_/name/ABBR/season/YEAR/seasontype/2,<br>\n",
+    "where ABBR (team abbreviation) and YEAR are our variables of interest. \n",
     "\n",
-    "Then we'll grab the dates and IDs of each game."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The opponent names and the game locations are stored in a section element of class \"flex items-center opponent-logo\". Opponent names are just the title of the image. Game locations are indicated by \"@\" or \"vs\" for away and home, respectively."
+    "The 2018-2019 Regular Season Schedule for the Golden State Warriors looks like the following:<br>\n",
+    "<img src=\"../images/teamSchedulePage.png\"/>"
    ]
   },
   {
@@ -187,20 +163,30 @@
     "\n",
     "team_schedules = dict()\n",
     "for team_abbr in list(teams.keys()):\n",
+    "    # Open the Team Schedule page and parse it.\n",
     "    url = 'https://www.espn.com/nba/team/schedule/_/name/'+team_abbr+'/season/'+year+'/seasontype/2'\n",
     "    schedule_url = request.urlopen(url).read()\n",
     "    time.sleep(1)\n",
     "    schedule_soup = BeautifulSoup(schedule_url,'lxml')\n",
     "    \n",
+    "    # The class for each table row of a team's schedule contains the string \"Table__TR\". \n",
+    "    # So, search for that and exclude the first row which contains column names.\n",
     "    game_rows = schedule_soup.select('tr[class*=\"Table__TR\"]')[1:]\n",
+    "    \n",
+    "    # Grab the dates of each game.\n",
     "    game_dates = [game.td.span.text for game in game_rows]\n",
+    "    # Append the team_abbr to each game ID. These will be used as dictionary keys later on.\n",
     "    game_ids = [team_abbr+'_'+game.find_all('a',href=True)[2]['href'].split('=')[1] for game in game_rows]\n",
     "\n",
+    "    # The game locations are stored in a section element of class \"flex items-center opponent-logo\".\n",
     "    game_logos = [game.find_all('div', attrs={'class':'flex items-center opponent-logo'}) for game in game_rows]\n",
+    "    # Game locations are indicated by \"@\" or \"vs\" for away and home, respectively.\n",
     "    game_locs = [game[0].span.text for game in game_logos]\n",
     "    \n",
+    "    # The result of a game is stored in a span element with a class containing the string \"fw-bold clr-\".\n",
     "    game_results = [game.text for game in schedule_soup.select('span[class*=\"fw-bold clr-\"]')]\n",
     "    \n",
+    "    # Put table rows into a dictionary with a key of format teamABBR_gameID\n",
     "    team_rows = list(zip(game_dates, game_locs, game_results))\n",
     "    team_schedules.update(zip(game_ids,team_rows))"
    ]
@@ -216,7 +202,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are three tables of class \"mod-data\" on the Team Matchup page. We're interested in the first table which contains the team box scores for this particular game."
+    "There are three tables of class \"mod-data\" on the Team Matchup page. Recall, the Team Matchup URL is of the format:<br>\n",
+    "https://www.espn.com/nba/matchup?gameId=401070218, and the page looks like the following:<br>\n",
+    "<img src=\"../images/teamMatchUpPage.png\"/><br>\n",
+    "We're interested in the largest table which contains the team box score (FG, FG%, 3PT, etc.) for this particular game."
    ]
   },
   {
@@ -226,6 +215,7 @@
    "outputs": [],
    "source": [
     "def get_box_score(table_data):\n",
+    "    \"\"\" Get all the cell data in a table. \"\"\"\n",
     "    box_data = []\n",
     "    for tr in table_data:\n",
     "        td = tr.find_all('td')\n",
@@ -254,43 +244,51 @@
     "    team_abbr = key.split('_')[0]\n",
     "    game_id = key.split('_')[1]\n",
     "\n",
+    "    # Make sure the URL opens\n",
     "    try:\n",
     "        box_url = request.urlopen('https://www.espn.com/nba/matchup?gameId='+game_id).read()\n",
     "        time.sleep(1)\n",
+    "    # If there is an HTTP error, wait 2 mins and try again.\n",
     "    except HTTPError as e:\n",
     "        print(team_abbr, game_id, e.reason)\n",
     "        time.sleep(120)\n",
     "        box_url = request.urlopen('https://www.espn.com/nba/matchup?gameId='+game_id).read()\n",
     "        pass\n",
     "\n",
-    "        \n",
-    "        \n",
+    "    # Make sure the URL has the same table format.\n",
     "    try:    \n",
     "        box_soup = BeautifulSoup(box_url,'lxml')\n",
     "\n",
     "        # Table containing the box score data\n",
     "        box_table = box_soup.find_all('table',attrs={'class':'mod-data'})[0]\n",
     "\n",
+    "        # Get abbreviation and game points of the home team.\n",
     "        home_team_container = box_soup.find_all('div', attrs={'class':'team home'})\n",
     "        home_team_abbr = home_team_container[0].find_all('span', attrs={'class':'abbrev'})[0].text.lower()\n",
     "        home_team_pts = box_soup.find_all('div', attrs={'class': 'score icon-font-before'})[0].text\n",
     "\n",
+    "        # Get abbreviation and game points of the away team.\n",
     "        away_team_container = box_soup.find_all('div', attrs={'class':'team away'})\n",
     "        away_team_abbr = away_team_container[0].find_all('span', attrs={'class':'abbrev'})[0].text.lower()\n",
     "        away_team_pts = box_soup.find_all('div', attrs={'class': 'score icon-font-after'})[0].text\n",
     "\n",
+    "        # Put the game points and a column name in a list.\n",
     "        points = ['PTS', away_team_pts, home_team_pts]\n",
     "\n",
     "        # Table rows with an indent class\n",
     "        indents = box_table.find_all('tr', attrs={'class':'indent'})\n",
     "        # Table rows with a highlight class\n",
     "        highlights = box_table.find_all('tr', attrs={'class':'highlight'})\n",
-    "\n",
+    "        \n",
+    "        # Get the box scores\n",
     "        highlights_data = get_box_score(highlights)\n",
     "        indents_data = get_box_score(indents)\n",
     "\n",
+    "        # Concatenate points, highlights, and indents lists. Then transpose.\n",
     "        box_data = np.concatenate(([points],highlights_data,indents_data)).T\n",
     "\n",
+    "        # List the team's data first then the opponent's data.\n",
+    "        # Also include the gameID, game date, game location, and game result.\n",
     "        if team_abbr == away_team_abbr:\n",
     "            row = np.concatenate(([team_abbr,teams[team_abbr],game_id],team_schedules[key],box_data[1],\n",
     "                                  [home_team_abbr,teams[home_team_abbr]],box_data[2]))\n",
@@ -298,54 +296,25 @@
     "            row = np.concatenate(([team_abbr,teams[team_abbr],game_id],team_schedules[key],box_data[2],\n",
     "                                  [away_team_abbr,teams[away_team_abbr]],box_data[1]))\n",
     "        final_data.append(row)\n",
+    "   \n",
+    "    # If the URL does not have the box score, skip this game ID and continue to the next one. \n",
     "    except IndexError as e:\n",
     "        print(team_abbr, game_id, e)\n",
     "        continue"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2458"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(final_data)"
+    "Looks like gameID = 401070856 between the Milwaukee Bucks and the L.A. Clippers is the only game which did not have a MatchUp page. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['wsh', 'Washington Wizards', '401071855', 'Fri, Apr 5', 'vs', 'L',\n",
-       "       '112', '42-88', '47.7', '9-32', '28.1', '19-22', '86.4', '43',\n",
-       "       '22', '2', '4', '10', '0', '54', '16', '4', '9', '25', '8', '0',\n",
-       "       '0', 'sa', 'San Antonio Spurs', '129', '51-91', '56.0', '10-25',\n",
-       "       '40.0', '17-20', '85.0', '49', '34', '3', '4', '9', '2', '56',\n",
-       "       '18', '24', '12', '30', '9', '1', '0'], dtype='<U20')"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "final_data[2045]"
+    "Let's get a list of the box score stats."
    ]
   },
   {
@@ -374,6 +343,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final data frame will contain columns for a team ('teamPTS', 'teamDREB', etc.) and for the opponent of that team ('opptPTS', 'opptDREB', etc.) for a given game. It will also include the gameID, the date the game was played, whether the game was home ('vs') or away ('@'), and the result of the game for the team ('W' or 'L')."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -386,21 +362,22 @@
     "             'opptABBR', 'opptName', 'opptPTS', 'opptFG', 'opptFG%',\n",
     "             'oppt3PT', 'oppt3PT%', 'opptFT', 'opptFT%', 'opptTREB', 'opptASST', 'opptSTL', 'opptBLK',\n",
     "             'opptTO', 'opptFB_PTS', 'opptPNT_PTS', 'opptFOUL', 'opptLG_LEAD', 'opptOREB', 'opptDREB',\n",
-    "             'opptTO_PTS', 'opptFOUL_T', 'opptFOUL_F']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "             'opptTO_PTS', 'opptFOUL_T', 'opptFOUL_F']\n",
+    "\n",
+    "# Create the data frame\n",
     "df = pd.DataFrame(final_data, columns=col_names)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the data frame for a random gameID."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +401,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>teamABBR</th>\n",
        "      <th>teamName</th>\n",
        "      <th>gameID</th>\n",
@@ -433,7 +411,6 @@
        "      <th>teamPTS</th>\n",
        "      <th>teamFG</th>\n",
        "      <th>teamFG%</th>\n",
-       "      <th>team3PT</th>\n",
        "      <th>...</th>\n",
        "      <th>opptTO</th>\n",
        "      <th>opptFB_PTS</th>\n",
@@ -450,6 +427,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2045</th>\n",
+       "      <td>2045</td>\n",
        "      <td>wsh</td>\n",
        "      <td>Washington Wizards</td>\n",
        "      <td>401071855</td>\n",
@@ -459,7 +437,6 @@
        "      <td>112</td>\n",
        "      <td>42-88</td>\n",
        "      <td>47.7</td>\n",
-       "      <td>9-32</td>\n",
        "      <td>...</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
@@ -474,6 +451,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2455</th>\n",
+       "      <td>2455</td>\n",
        "      <td>sa</td>\n",
        "      <td>San Antonio Spurs</td>\n",
        "      <td>401071855</td>\n",
@@ -483,7 +461,6 @@
        "      <td>129</td>\n",
        "      <td>51-91</td>\n",
        "      <td>56.0</td>\n",
-       "      <td>10-25</td>\n",
        "      <td>...</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -498,32 +475,44 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 50 columns</p>\n",
+       "<p>2 rows × 51 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     teamABBR            teamName     gameID    gameDate gameLoc teamResult  \\\n",
-       "2045      wsh  Washington Wizards  401071855  Fri, Apr 5      vs          L   \n",
-       "2455       sa   San Antonio Spurs  401071855  Fri, Apr 5       @          W   \n",
+       "      Unnamed: 0 teamABBR            teamName     gameID    gameDate gameLoc  \\\n",
+       "2045        2045      wsh  Washington Wizards  401071855  Fri, Apr 5      vs   \n",
+       "2455        2455       sa   San Antonio Spurs  401071855  Fri, Apr 5       @   \n",
        "\n",
-       "     teamPTS teamFG teamFG% team3PT  ... opptTO opptFB_PTS opptPNT_PTS  \\\n",
-       "2045     112  42-88    47.7    9-32  ...      9          2          56   \n",
-       "2455     129  51-91    56.0   10-25  ...     10          0          54   \n",
+       "     teamResult  teamPTS teamFG  teamFG%  ... opptTO  opptFB_PTS opptPNT_PTS  \\\n",
+       "2045          L      112  42-88     47.7  ...      9           2          56   \n",
+       "2455          W      129  51-91     56.0  ...     10           0          54   \n",
        "\n",
-       "     opptFOUL opptLG_LEAD opptOREB opptDREB opptTO_PTS opptFOUL_T opptFOUL_F  \n",
-       "2045       18          24       12       30          9          1          0  \n",
-       "2455       16           4        9       25          8          0          0  \n",
+       "      opptFOUL  opptLG_LEAD  opptOREB  opptDREB  opptTO_PTS  opptFOUL_T  \\\n",
+       "2045        18           24        12        30           9           1   \n",
+       "2455        16            4         9        25           8           0   \n",
        "\n",
-       "[2 rows x 50 columns]"
+       "      opptFOUL_F  \n",
+       "2045           0  \n",
+       "2455           0  \n",
+       "\n",
+       "[2 rows x 51 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df.gameID.str.contains('401071855')]"
+    "df[df.gameID==401071855]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/checkMatchUp.png\"/><br>\n",
+    "Looks like we're successful! Now we just save our data to a CSV file."
    ]
   },
   {
@@ -534,13 +523,6 @@
    "source": [
     "df.to_csv('../data/nba_team_box_scores_'+str(year)+'.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
