cleaned up web scraping code

--- a/nbs/nbaWebScrape.ipynb
+++ b/nbs/nbaWebScrape.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,10 +172,12 @@
     "    # The class for each table row of a team's schedule contains the string \"Table__TR\". \n",
     "    # So, search for that and exclude the first row which contains column names.\n",
     "    game_rows = schedule_soup.select('tr[class*=\"Table__TR\"]')[1:]\n",
-    "    \n",
+    "\n",
     "    # Grab the dates of each game.\n",
     "    game_dates = [game.td.span.text for game in game_rows]\n",
     "    # Append the team_abbr to each game ID. These will be used as dictionary keys later on.\n",
+    "    # For each row, get the all the <a> tag hyperlinks, select the third hyperlink,\n",
+    "    # split on the equals sign, and take the second element of the split to get the gameID.\n",
     "    game_ids = [team_abbr+'_'+game.find_all('a',href=True)[2]['href'].split('=')[1] for game in game_rows]\n",
     "\n",
     "    # The game locations are stored in a section element of class \"flex items-center opponent-logo\".\n",
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +335,7 @@
        "      dtype='<U20')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +403,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>teamABBR</th>\n",
        "      <th>teamName</th>\n",
        "      <th>gameID</th>\n",
@@ -411,6 +412,7 @@
        "      <th>teamPTS</th>\n",
        "      <th>teamFG</th>\n",
        "      <th>teamFG%</th>\n",
+       "      <th>team3PT</th>\n",
        "      <th>...</th>\n",
        "      <th>opptTO</th>\n",
        "      <th>opptFB_PTS</th>\n",
@@ -427,7 +429,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2045</th>\n",
-       "      <td>2045</td>\n",
        "      <td>wsh</td>\n",
        "      <td>Washington Wizards</td>\n",
        "      <td>401071855</td>\n",
@@ -437,6 +438,7 @@
        "      <td>112</td>\n",
        "      <td>42-88</td>\n",
        "      <td>47.7</td>\n",
+       "      <td>9-32</td>\n",
        "      <td>...</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
@@ -451,7 +453,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2455</th>\n",
-       "      <td>2455</td>\n",
        "      <td>sa</td>\n",
        "      <td>San Antonio Spurs</td>\n",
        "      <td>401071855</td>\n",
@@ -461,6 +462,7 @@
        "      <td>129</td>\n",
        "      <td>51-91</td>\n",
        "      <td>56.0</td>\n",
+       "      <td>10-25</td>\n",
        "      <td>...</td>\n",
        "      <td>10</td>\n",
        "      <td>0</td>\n",
@@ -475,36 +477,32 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 51 columns</p>\n",
+       "<p>2 rows × 50 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0 teamABBR            teamName     gameID    gameDate gameLoc  \\\n",
-       "2045        2045      wsh  Washington Wizards  401071855  Fri, Apr 5      vs   \n",
-       "2455        2455       sa   San Antonio Spurs  401071855  Fri, Apr 5       @   \n",
+       "     teamABBR            teamName     gameID    gameDate gameLoc teamResult  \\\n",
+       "2045      wsh  Washington Wizards  401071855  Fri, Apr 5      vs          L   \n",
+       "2455       sa   San Antonio Spurs  401071855  Fri, Apr 5       @          W   \n",
        "\n",
-       "     teamResult  teamPTS teamFG  teamFG%  ... opptTO  opptFB_PTS opptPNT_PTS  \\\n",
-       "2045          L      112  42-88     47.7  ...      9           2          56   \n",
-       "2455          W      129  51-91     56.0  ...     10           0          54   \n",
+       "     teamPTS teamFG teamFG% team3PT  ... opptTO opptFB_PTS opptPNT_PTS  \\\n",
+       "2045     112  42-88    47.7    9-32  ...      9          2          56   \n",
+       "2455     129  51-91    56.0   10-25  ...     10          0          54   \n",
        "\n",
-       "      opptFOUL  opptLG_LEAD  opptOREB  opptDREB  opptTO_PTS  opptFOUL_T  \\\n",
-       "2045        18           24        12        30           9           1   \n",
-       "2455        16            4         9        25           8           0   \n",
+       "     opptFOUL opptLG_LEAD opptOREB opptDREB opptTO_PTS opptFOUL_T opptFOUL_F  \n",
+       "2045       18          24       12       30          9          1          0  \n",
+       "2455       16           4        9       25          8          0          0  \n",
        "\n",
-       "      opptFOUL_F  \n",
-       "2045           0  \n",
-       "2455           0  \n",
-       "\n",
-       "[2 rows x 51 columns]"
+       "[2 rows x 50 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df.gameID==401071855]"
+    "df[df.gameID=='401071855']"
    ]
   },
   {
@@ -517,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
